--- a/package.json
+++ b/package.json
@@ -12,55 +12,51 @@
   "bugs": {
     "url": "https://github.com/SmartColumbusOS/discovery/issues"
   },
+  "browserslist": [
+    "last 2 version",
+    "> 1%"
+  ],
   "homepage": "https://github.com/SmartColumbusOS/discovery#readme",
   "peerDependencies": {
+    "axios": "^0.19.0",
+    "@babel/core": "^7.4.3",
     "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-redux": "^5.1.1",
+    "react-chart-editor": "^0.38.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
+    "leaflet": "^1.5.1",
+    "react-sanitized-html": "^2.0.0",
+    "lodash": "^4.17.12"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "acorn": "^7.0.0",
-    "axios": "^0.19.0",
-    "babel-plugin-react-css-modules": "^5.2.6",
-    "css-loader": "^1.0.1",
-    "leaflet": "^1.5.1",
-    "lodash": "^4.17.12",
     "moment": "^2.24.0",
-    "node-sass": "^4.11.0",
-    "normalize.css": "^8.0.1",
+    "parcel-bundler": "^1.12.3",
     "qs": "^6.7.0",
-    "react": "^16.8.6",
-    "react-chart-editor": "^0.38.1",
     "react-collapse": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.6",
     "react-gtm-module": "^2.0.4",
     "react-image-fallback": "^8.0.0",
     "react-leaflet": "^2.4.0",
     "react-motion": "^0.5.2",
-    "react-redux": "^5.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-sanitized-html": "^2.0.0",
     "react-share": "^2.4.0",
     "react-svg-inline": "^2.1.1",
     "react-table": "^6.9.2",
-    "redux": "^4.0.1",
-    "redux-saga": "^0.16.2",
     "reselect": "^4.0.0",
     "sanitize-html": "^1.20.1",
-    "sass-loader": "^7.1.0",
     "storage2": "^0.1.0",
-    "style-loader": "^0.23.1",
-    "svg-inline-loader": "^0.8.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-do-expressions": "^7.5.0",
@@ -78,16 +74,19 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@gfx/zopfli": "^1.0.14",
+    "axios": "^0.19.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "create-react-component-folder": "^0.1.30",
+    "css-loader": "^1.0.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "faker": "^4.1.0",
@@ -95,19 +94,58 @@
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.6.0",
+    "leaflet": "^1.5.1",
+    "lodash": "^4.17.12",
     "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "postcss-scss": "^2.0.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.8.6",
+    "react-chart-editor": "^0.38.1",
+    "react-dom": "^16.8.6",
+    "react-redux": "^5.1.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-sanitized-html": "^2.0.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
+    "rollup": "^1.20.3",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-image": "^1.0.2",
+    "rollup-plugin-img": "^1.1.0",
+    "rollup-plugin-inline-svg": "^1.1.1",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-local-resolve": "^1.0.7",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-svg": "^2.0.0",
+    "rollup-plugin-uglify": "^6.0.3",
+    "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.3.1"
+    "style-loader": "^0.23.1",
+    "svg-inline-loader": "^0.8.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1"
   },
   "standard": {
     "env": [
       "jest"
     ]
+  },
+  "preconstruct": {
+    "packages": [
+      "."
+    ],
+    "globals": {
+      "react": "React"
+    }
   },
   "jest": {
     "setupFiles": [
@@ -120,7 +158,7 @@
     }
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development",
     "lint": "standard --fix",
     "test": "jest",
