--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "> 1%"
   ],
   "homepage": "https://github.com/SmartColumbusOS/discovery#readme",
-  "peerDependencies": {
+  "peerDependencies": {},
+  "dependencies": {
     "axios": "^0.19.0",
     "@babel/core": "^7.4.3",
     "prop-types": "^15.6.0",
@@ -31,9 +32,7 @@
     "redux-saga": "^0.16.2",
     "leaflet": "^1.5.1",
     "react-sanitized-html": "^2.0.0",
-    "lodash": "^4.17.12"
-  },
-  "dependencies": {
+    "lodash": "^4.17.12",
     "@babel/runtime": "^7.5.5",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
@@ -56,6 +55,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.4",
@@ -81,11 +81,14 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.6",
+    "babel-plugin-inline-react-svg": "^1.1.0",
+    "babel-plugin-inline-svg": "^1.0.1",
     "babel-plugin-react-css-modules": "^5.2.6",
     "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "create-react-component-folder": "^0.1.30",
+    "cross-env": "^5.2.1",
     "css-loader": "^1.0.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
