temp - with cleaned up deps (kinda) and build script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "peerDependencies": {},
   "dependencies": {
     "axios": "^0.19.0",
-    "@babel/core": "^7.4.3",
     "prop-types": "^15.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -38,7 +37,6 @@
     "@material-ui/icons": "^3.0.2",
     "acorn": "^7.0.0",
     "moment": "^2.24.0",
-    "parcel-bundler": "^1.12.3",
     "qs": "^6.7.0",
     "react-collapse": "^4.0.3",
     "react-copy-to-clipboard": "^5.0.1",
@@ -51,8 +49,7 @@
     "react-table": "^6.9.2",
     "reselect": "^4.0.0",
     "sanitize-html": "^1.20.1",
-    "storage2": "^0.1.0",
-    "webpack-node-externals": "^1.7.2"
+    "storage2": "^0.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -75,7 +72,6 @@
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@gfx/zopfli": "^1.0.14",
     "axios": "^0.19.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
@@ -85,11 +81,11 @@
     "babel-plugin-react-css-modules": "^5.2.6",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
-    "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "create-react-component-folder": "^0.1.30",
     "cross-env": "^5.2.1",
     "css-loader": "^1.0.1",
+    "depcheck": "^0.8.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "faker": "^4.1.0",
@@ -106,28 +102,6 @@
     "postcss-preset-env": "^6.6.0",
     "postcss-scss": "^2.0.0",
     "prop-types": "^15.6.0",
-    "react": "^16.8.6",
-    "react-chart-editor": "^0.38.1",
-    "react-dom": "^16.8.6",
-    "react-redux": "^5.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-sanitized-html": "^2.0.0",
-    "redux": "^4.0.1",
-    "redux-saga": "^0.16.2",
-    "rollup": "^1.20.3",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-image": "^1.0.2",
-    "rollup-plugin-img": "^1.1.0",
-    "rollup-plugin-inline-svg": "^1.1.1",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-local-resolve": "^1.0.7",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-svg": "^2.0.0",
-    "rollup-plugin-uglify": "^6.0.3",
     "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
     "style-loader": "^0.23.1",
@@ -162,6 +136,7 @@
   },
   "scripts": {
     "build": "webpack --mode production",
+    "build:library": "rm -rf lib && cross-env BABEL_OUTPUT=commonjs babel src --out-dir lib/ --ignore 'src/**/*.spec.js','src/**/*.test.js','__mocks__/**' --copy-files",
     "start": "webpack-dev-server --mode development",
     "lint": "standard --fix",
     "test": "jest",
