--- a/.npmignore
+++ b/.npmignore
@@ -2,3 +2,19 @@ src
 demo
 .babelrc
 webpack.config.js
+
+scripts
+stubs
+test-helpers
+**/*.test.js
+lib/index.*
+
+.dockerignore
+.travis.yml
+Dockerfile
+LICENSE
+nginx-default.conf
+run.sh
+README.md
+config/config.js
+*.tgz
