--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discovery-consumer",
   "version": "1.0.0",
   "description": "UI for dataset discovery",
-  "main": "./lib/App.js",
+  "main": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SmartColumbusOS/discovery.git"
@@ -19,38 +19,10 @@
   "homepage": "https://github.com/SmartColumbusOS/discovery#readme",
   "peerDependencies": {},
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "acorn": "^7.0.0",
-    "axios": "^0.19.0",
-    "discovery": "file:../discovery-ui",
-    "leaflet": "^1.5.1",
-    "lodash": "^4.17.12",
-    "moment": "^2.24.0",
-    "prop-types": "^15.6.0",
-    "qs": "^6.7.0",
+    "discovery": "file:../discovery-ui/discovery-1.0.0.tgz",
     "react": "^16.8.6",
-    "react-chart-editor": "^0.38.1",
-    "react-collapse": "^4.0.3",
-    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
-    "react-gtm-module": "^2.0.4",
-    "react-image-fallback": "^8.0.0",
-    "react-leaflet": "^2.4.0",
-    "react-motion": "^0.5.2",
-    "react-redux": "^5.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-sanitized-html": "^2.0.0",
-    "react-share": "^2.4.0",
-    "react-svg-inline": "^2.1.1",
-    "react-table": "^6.9.2",
-    "redux": "^4.0.1",
-    "redux-saga": "^0.16.2",
-    "reselect": "^4.0.0",
-    "sanitize-html": "^1.20.1",
-    "storage2": "^0.1.0"
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -73,36 +45,18 @@
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "axios": "^0.19.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.6",
-    "babel-plugin-inline-react-svg": "^1.1.0",
-    "babel-plugin-inline-svg": "^1.0.1",
-    "babel-plugin-react-css-modules": "^5.2.6",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.6.0",
     "create-react-component-folder": "^0.1.30",
-    "cross-env": "^5.2.1",
     "css-loader": "^1.0.1",
-    "depcheck": "^0.8.3",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "faker": "^4.1.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.6.0",
-    "leaflet": "^1.5.1",
-    "lodash": "^4.17.12",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.11.0",
-    "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "postcss-scss": "^2.0.0",
-    "prop-types": "^15.6.0",
     "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
     "style-loader": "^0.23.1",
@@ -117,30 +71,9 @@
       "jest"
     ]
   },
-  "preconstruct": {
-    "packages": [
-      "."
-    ],
-    "globals": {
-      "react": "React"
-    }
-  },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>/test-helpers/test-start-point.js"
-    ],
-    "moduleNameMapper": {
-      ".+\\.(jpg|jpeg|png|gif)$": "<rootDir>/test-helpers/image-mock.js",
-      "\\.(css|scss)$": "identity-obj-proxy",
-      "\\.(svg)$": "<rootDir>/test-helpers/mock-svg-string.js"
-    }
-  },
   "scripts": {
     "build": "webpack --mode production",
-    "build:library": "rm -rf lib && cross-env BABEL_OUTPUT=commonjs babel src --out-dir lib/ --ignore 'src/**/*.spec.js','src/**/*.test.js','__mocks__/**' --copy-files",
     "start": "webpack-dev-server --mode development",
-    "lint": "standard --fix",
-    "test": "jest",
-    "test-watch": "jest --watch"
+    "lint": "standard --fix"
   }
 }
