--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "dependencies": {
     "discovery": "file:../discovery-ui/discovery-1.0.0.tgz",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "prop-types": "^15.6.0"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
