--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@smartcitiesdata/react-discovery-ui": "0.0.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@smartcitiesdata/react-discovery-ui": "0.1.0",
+    "react": "~16.8.6",
+    "react-dom": "~16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
