Renaming Discovery UI to Discovery for Columbus specific implementation.
smartcitiesdata/discovery_ui#187

co-authored-by: Kenny Drobnack <kdrobnack@pillartechnology.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 services:
   - docker
 script:
-  - travis_wait docker build -t discovery_ui:build .
+  - travis_wait docker build -t discovery:build .
 deploy:
 - provider: script
   skip_cleanup: true
