--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -3,6 +3,8 @@ server {
     server_name  localhost;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
+    add_header X-Frame-Options "DENY";
+    add_header Cache-Control "no-cache";
     gzip on;
     gzip_static on;
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
