--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -4,7 +4,7 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Frame-Options "DENY";
-    add_header Cache-Control "no-cache";
+    add_header Cache-Control "no-cache, no-store, must-revalidate";
     add_header Pragma "no-cache";
     gzip on;
     gzip_static on;
