Updated files to rename "discovery" back to "discovery_ui" to be consistent with expected naming.
smartcolumbusos/discovery_ui#13

co-authored-by: Richard Jones <rajones@hntb.com>

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "discovery",
+  "name": "discovery_ui",
   "version": "1.0.0",
   "description": "UI for dataset discovery",
   "main": "./src/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/smartcolumbusos/discovery.git"
+    "url": "git+https://github.com/smartcolumbusos/discovery_ui.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/smartcolumbusos/discovery/issues"
+    "url": "https://github.com/smartcolumbusos/discovery_ui/issues"
   },
   "browserslist": [
     "last 2 version",
     "> 1%"
   ],
-  "homepage": "https://github.com/smartcolumbusos/discovery#readme",
+  "homepage": "https://github.com/smartcolumbusos/discovery_ui#readme",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
