--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -6,7 +6,7 @@ server {
     add_header X-Frame-Options "DENY";
     add_header Cache-Control "no-cache, no-store, must-revalidate";
     add_header Pragma "no-cache";
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' *.googletagmanager.com; style-src 'self' 'unsafe-inline'; frame-src 'none'; img-src 'self' *.smartcolumbusos.com *.dev-smartos.com *.staging-smartos.com *.amazonaws.com *.mapbox.com data:; connect-src 'self' *.smartcolumbusos.com *.dev-smartos.com *.staging-smartos.com; block-all-mixed-content";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' *.googletagmanager.com; style-src 'self' 'unsafe-inline'; frame-src *.auth0.com; img-src 'self' *.smartcolumbusos.com *.dev-smartos.com *.staging-smartos.com *.amazonaws.com *.mapbox.com data:; connect-src 'self' *.smartcolumbusos.com *.dev-smartos.com *.staging-smartos.com *.auth0.com; block-all-mixed-content";
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
 
     gzip on;
