--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -6,7 +6,7 @@ server {
     add_header X-Frame-Options "DENY";
     add_header Cache-Control "no-cache, no-store, must-revalidate";
     add_header Pragma "no-cache";
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' *.googletagmanager.com *.google-analytics.com; style-src 'self' 'unsafe-inline'; frame-src *.auth0.com; img-src 'self' *.smartcolumbusos.com ${ADDITIONAL_CSP_HOSTS} *.amazonaws.com *.mapbox.com *.google-analytics.com data: blob:; connect-src 'self' *.smartcolumbusos.com ${ADDITIONAL_CSP_HOSTS} *.auth0.com *.mapbox.com *.plot.ly; worker-src blob:; block-all-mixed-content";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' *.googletagmanager.com *.google-analytics.com; style-src 'self' 'unsafe-inline'; frame-src *.auth0.com; img-src 'self' *.smartcolumbusos.com ${ADDITIONAL_CSP_HOSTS} *.amazonaws.com *.mapbox.com *.google-analytics.com *.google.com *.doubleclick.net data: blob:; connect-src 'self' *.smartcolumbusos.com ${ADDITIONAL_CSP_HOSTS} *.auth0.com *.mapbox.com *.plot.ly; worker-src blob:; block-all-mixed-content";
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
 
     gzip on;
