--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.3.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack-subresource-integrity": "^1.4.0"
   },
   "standard": {
     "env": [
