--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -24,6 +24,11 @@ server {
         try_files $uri /index.html;
     }
 
+    location /robots.txt {
+        add_header  Content-Type  text/plain;
+        alias /usr/share/nginx/html;
+    }
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
