--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "postcss-scss": "^2.0.0",
+    "robotstxt-webpack-plugin": "^7.0.0",
     "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
     "style-loader": "^0.23.1",
