--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -9,6 +9,8 @@ server {
     add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline' *.googletagmanager.com *.google-analytics.com; style-src 'self' 'unsafe-inline'; frame-src *.auth0.com; img-src 'self' *.smartcolumbusos.com ${ADDITIONAL_CSP_HOSTS} *.amazonaws.com *.mapbox.com *.google-analytics.com *.google.com *.doubleclick.net data: blob:; connect-src 'self' *.smartcolumbusos.com ${ADDITIONAL_CSP_HOSTS} *.auth0.com *.mapbox.com *.plot.ly; worker-src blob:; block-all-mixed-content";
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
 
+    more_clear_headers Server;
+
     gzip on;
     gzip_static on;
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
