--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@smartcitiesdata/react-discovery-ui": "^1.3.7",
+    "@smartcitiesdata/react-discovery-ui": "^1.4.0",
     "react": "~16.8.6",
-    "react-dom": "~16.8.6"
+    "react-dom": "~16.8.6",
+    "react-hamburger-button": "0.0.1",
+    "react-hamburger-menu": "^1.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
