--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker publish
 
 on:
   push:
@@ -17,6 +17,7 @@ jobs:
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
 
     steps:
+      - uses: actions/checkout@v2
       - name: Build Image
         run: docker build -t discovery_ui:build .
       - name: Publish Dev Image
@@ -28,6 +29,7 @@ jobs:
     if: github.event_name == 'release'
 
     steps:
+      - uses: actions/checkout@v2
       - name: Build Image
         run: docker build -t discovery_ui:build .
       - name: Publish Tagged Image
