--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,7 +9,9 @@ on:
       - created
   workflow_dispatch:
 env:
-  GITHUB_BRANCH: ${{ github.event.release.tag_name }} 
+  GITHUB_BRANCH: ${{ github.event.release.tag_name }}
+  DOCKER_USERNAME: ${{ secrets.docker_username }}
+  DOCKER_PASSWORD: ${{ secrets.docker_password }}
 jobs:
   dev:
     name: Publish Development Image
