--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.10.3",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-do-expressions": "^7.5.0",
@@ -53,22 +53,22 @@
     "babel-loader": "^8.0.6",
     "compression-webpack-plugin": "^3.0.1",
     "copy-webpack-plugin": "^5.1.1",
-    "create-react-component-folder": "^0.1.30",
+    "create-react-component-folder": "^0.3.7",
     "css-loader": "^1.0.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
+    "jest": "^27.0.6",
     "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.11.0",
+    "node-sass": "^6.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "postcss-scss": "^2.0.0",
     "robotstxt-webpack-plugin": "^7.0.0",
-    "sass-loader": "^7.1.0",
-    "standard": "^12.0.1",
+    "sass-loader": "^10.0.0",
+    "standard": "^16.0.3",
     "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.39.3",
@@ -83,6 +83,7 @@
     ]
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "setupFiles": [
       "<rootDir>/test-helpers/test-start-point.js"
     ],
