--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discovery_ui",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "UI for dataset discovery",
   "main": "./src/index.js",
   "repository": {
@@ -21,7 +21,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@smartcitiesdata/react-discovery-ui": "file:../react_discovery_ui/smartcitiesdata-react-discovery-ui-1.8.0.tgz",
+    "@smartcitiesdata/react-discovery-ui": "^2.0.0",
     "react": "~16.8.6",
     "react-dom": "~16.8.6",
     "react-hamburger-button": "0.0.1",
