--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -20,14 +20,14 @@ server {
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
 
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
     location / {
-        root   /nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
+      try_files $uri $uri/ /index.html;
     }
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /nginx/html;
+        root   /usr/share/nginx/html;
     }
 }
