Enabling quay publish after dev image is built

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,6 +24,8 @@ jobs:
         run: docker build -t discovery_ui:build .
       - name: Publish Dev Image
         run: bash scripts/deploy.sh master
+      - name: Publish to Quay
+        run: bash scripts/quay.sh discovery_ui development
         
   release:
     name: Release Image
