--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,6 +12,8 @@ env:
   GITHUB_BRANCH: ${{ github.event.release.tag_name }}
   DOCKER_USERNAME: ${{ secrets.docker_username }}
   DOCKER_PASSWORD: ${{ secrets.docker_password }}
+  QUAY_USERNAME: ${{ secrets.quay_username }}
+  QUAY_PASSWORD: ${{ secrets.quay_password }}
 jobs:
   dev:
     name: Publish Development Image
@@ -24,7 +26,7 @@ jobs:
         run: docker build -t discovery_ui:build .
       - name: Publish Dev Image
         run: bash scripts/deploy.sh master
-        
+
   release:
     name: Release Image
     runs-on: ubuntu-latest
@@ -36,3 +38,5 @@ jobs:
         run: docker build -t discovery_ui:build .
       - name: Publish Tagged Image
         run: bash scripts/deploy.sh release
+      - name: Publish to Quay
+        run: bash scripts/quay.sh discovery_ui development
