--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,3 +40,11 @@ jobs:
         run: docker build -t discovery_ui:build .
       - name: Publish Tagged Image
         run: bash scripts/deploy.sh release
+
+  services:
+    nginx:
+      image: nginx
+      # Map port 8080 on the Docker host to port 80 on the nginx container
+      ports:
+        - 8080:80
+
