--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@smartcitiesdata/react-discovery-ui": "^2.0.0",
     "react": "~16.8.6",
     "react-dom": "~16.8.6",
-    "react-hamburger-button": "0.0.1",
-    "react-hamburger-menu": "^1.1.1"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
