--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@smartcitiesdata/react-discovery-ui": "^2.0.1",
+    "immutable": "^3.8.2",
     "react": "~16.8.6",
     "react-dom": "~16.8.6",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
